--- a/src/Components/ProjectCard/ProjectCard.module.scss
+++ b/src/Components/ProjectCard/ProjectCard.module.scss
@@ -1,12 +1,15 @@
 .wholeCard {
   display: flex;
+  color: #382d72;
   flex-direction: column;
   width: 90vw;
   height: auto;
-  border: 2px solid black;
+  border: none;
+  box-shadow: 2px 4px 16px #a080e1;
   border-radius: 30px;
   justify-content: space-between;
-  background-color: rgb(249, 239, 228);
+  background-color: #b7c2c6;
+  padding: 15px;
   @media (min-width: 768px) {
     width: 45vw;
   }
@@ -17,8 +20,7 @@
 
 .imgStyle {
   object-fit: cover;
-  border-radius: 30px 30px 0 0;
-  padding: none;
+  border-radius: 30px;
   height: auto;
 }
 
