--- a/src/Containers/Projects/Projects.module.scss
+++ b/src/Containers/Projects/Projects.module.scss
@@ -2,9 +2,7 @@
   list-style-type: none;
   display: flex;
   flex-flow: row wrap;
-  row-gap: 15px;
-  column-gap: 50px;
-  padding-left: 0;
+  gap: 50px;
   margin-bottom: 30px;
   justify-content: center;
 }
